--- a/config.ini
+++ b/config.ini
@@ -15,3 +15,4 @@ hdbscan_min_cluster_size = 20
 # umap_n_neighbors = 15
 # umap_n_components = 5
 # umap_min_dist = 0.0
+# reduce_frequent_words = true
