Refactor: Generalize config loading and add visualization
Allows specifying the config file path as a CLI argument.
Adds visualization of topic model results as an html file.
Adds several new config files.
Cleans up .gitignore file.

--- a/config-all-minilm-l6-v2.ini
+++ b/config-all-minilm-l6-v2.ini
@@ -1,10 +1,10 @@
 [Paths]
 json_file_path = split_output/train.json
-embeddings_path = embeddings-bge-small-en-1-5.npy
-results_output_dir = bertopic_results_from_config
+embeddings_path = embeddings-all-minilm-l6-2.npy
+results_output_dir = bertopic_results_all-minilm
 
 [Models]
-embedding_model_name = BAAI/bge-small-en-v1.5
+embedding_model_name = sentence-transformers/all-MiniLM-L6-v2
 
 [BERTopicParams]
 ngram_range_lower = 1
