--- a/config-mpnet.ini
+++ b/config-mpnet.ini
@@ -1,16 +1,16 @@
 [Paths]
 json_file_path = split_output/train.json
-embeddings_path = embeddings-bge-small-en-1-5.npy
-results_output_dir = bertopic_results_from_config
+embeddings_path = embeddings-all-mpnet-2.npy
+results_output_dir = bertopic_results_all_mpnet
 
 [Models]
-embedding_model_name = BAAI/bge-small-en-v1.5
+embedding_model_name = sentence-transformers/all-mpnet-base-v2
 
 [BERTopicParams]
 ngram_range_lower = 1
 ngram_range_upper = 3
 mmr_diversity = 0.3
-hdbscan_min_cluster_size = 50
+hdbscan_min_cluster_size = 20
 # Optional: Add UMAP parameters if you want them configurable
 # umap_n_neighbors = 15
 # umap_n_components = 5
