--- a/config-all-minilm-l6-v2.ini
+++ b/config-all-minilm-l6-v2.ini
@@ -1,7 +1,7 @@
 [Paths]
 json_file_path = split_output/train.json
 embeddings_path = embeddings-all-minilm-l6-2.npy
-results_output_dir = bertopic_results_all-minilm
+results_output_dir = bertopic_results_all-minilm-default
 
 [Models]
 embedding_model_name = sentence-transformers/all-MiniLM-L6-v2
@@ -10,9 +10,8 @@ embedding_model_name = sentence-transformers/all-MiniLM-L6-v2
 ngram_range_lower = 1
 ngram_range_upper = 3
 mmr_diversity = 0.3
-hdbscan_min_cluster_size = 50
+hdbscan_min_cluster_size = 20
 # Optional: Add UMAP parameters if you want them configurable
-# umap_n_neighbors = 15
-# umap_n_components = 5
-# umap_min_dist = 0.0
+umap_n_neighbors = 15
+umap_min_dist = 0.1
 # reduce_frequent_words = true
