Load fitted UMAP and HDBSCAN models
Loads the fitted UMAP and HDBSCAN models from the specified
directories during BERTopic model creation. This allows for
reusing pre-computed UMAP and HDBSCAN models.
Also adds directories to config.

--- a/config-bge-small-v1-5.ini
+++ b/config-bge-small-v1-5.ini
@@ -3,6 +3,9 @@ json_file_path = split_output/train.json
 embeddings_path = embeddings-bge-small-en-1-5.npy
 results_output_dir = bertopic_results_bge-small-default
 
+umap_dir = fitted_umap_model_default
+hdbscan_dir= fitted_hdbscan_model_default
+
 [Models]
 embedding_model_name = BAAI/bge-small-en-v1.5
 
@@ -11,7 +14,6 @@ ngram_range_lower = 1
 ngram_range_upper = 3
 mmr_diversity = 0.3
 hdbscan_min_cluster_size = 20
-# Optional: Add UMAP parameters if you want them configurable
+hdbscan_min_samples = 20
 umap_n_neighbors = 15
 umap_min_dist = 0.1
-# reduce_frequent_words = true
