--- a/config-mpnet.ini
+++ b/config-mpnet.ini
@@ -1,7 +1,10 @@
 [Paths]
 json_file_path = split_output/train.json
 embeddings_path = embeddings-all-mpnet-2.npy
-results_output_dir = bertopic_results_all_mpnet
+results_output_dir = bertopic_results_all_mpnet-default
+
+umap_dir = fitted_umap_model_default
+hdbscan_dir= fitted_hdbscan_model_default
 
 [Models]
 embedding_model_name = sentence-transformers/all-mpnet-base-v2
@@ -11,8 +14,6 @@ ngram_range_lower = 1
 ngram_range_upper = 3
 mmr_diversity = 0.3
 hdbscan_min_cluster_size = 20
-# Optional: Add UMAP parameters if you want them configurable
-# umap_n_neighbors = 15
-# umap_n_components = 5
-# umap_min_dist = 0.0
-# reduce_frequent_words = true
+hdbscan_min_samples = 20
+umap_n_neighbors = 15
+umap_min_dist = 0.1
