--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,9 @@
 [Paths]
 json_file_path = split_output/train.json
 embeddings_path = embeddings-bge-small-en-1-5.npy
+umap_dir = fitted_umap_model
+hdbscan_dir= fitted_hdbscan_model
+
 results_output_dir = bertopic_results_from_config
 
 [Models]
